--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+@import url('https://fonts.googleapis.com/css2?family=Rowdies&family=Sora&family=Bangers&display=swap');
 
 .App-header {
-  background-color: #282c34;
+  background: linear-gradient(to right, #4b79a1, #283e51);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +11,46 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.pagination{
+  margin: 1rem 0.3rem 1rem 0.3rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.head{
+  font-family: 'Bangers', cursive;
+  margin: 2rem 0 1rem 0;
 }
+
+/* characer card styling */
+
+#character{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 1rem 1rem 1rem 1rem;
+  background: linear-gradient(to left, #4b79a1, #345169);
+  height: 100%;
+  width: 100%;
+  border-radius: 110px 110px 60px 60px;
+  box-shadow: 0px 0px 5px 3px rgba(61,60,61,1);
+
+}
+
+#character img{
+  border-radius: 50px 50px 50px 50px;
+  box-shadow: 0px 2px 5px 2px rgba(0,0,0,0.75);
+  margin: 2rem;
+}
+
+#charName{
+  margin: 1rem 0rem 1.2rem 0rem;
+  font-family: 'Rowdies', cursive;
+}
+
+#info{
+  font-family: 'Sora', sans-serif;
+  margin: 0.5rem 0.5rem;
+  font-size: 1rem;
+}
+
+/* end */
